
	* mktex4ht-cnf.tex: uncommented mktex4ht configuration.
	* tex4ht-info.tex (info4ht.4ht),
	tex4ht-info-html4.tex (infoht4.4ht),
	tex4ht-info-mml.tex (infomml.4ht,
	tex4ht-info-svg.tex (infosvg.4ht): Added definition of \CleanComment 
	macro to each of these files, because it needs current filename in 
	it's definition. Generated info files, except infosvg.4ht, should work
	now.

2017-05-09  Karl Berry  <karl@freefriends.org>

	* tex4ht-info-svg.tex (infosvg.4ht),
	tex4ht-svg.tex (svg.4ht),
	tex4ht-fonts-noncjk.tex 
	(tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/misc/SkakNew.htf): copyright.

2017-05-05  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex
	(tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/misc/SkakNew.htf):
	Support for chess figures.
	* tex4ht-4ht.tex (skak.4ht),
	* tex4ht-html (html4.4ht): added support for skak package 
	chessboards.
	* tex4ht-svg.tex (svg.4ht, html4-svg.4ht),
	* tex4ht-options.tex (tex4ht.4ht): introduced new option,
	`svg-inline`, which holds the original meaning of `svg` option.
	`svg` option now doesn't include the image in the document text.
	* tex4ht-info-svg.tex (infosvg.4ht): added information about 
	various svg options.

2017-05-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): round dimensions and remove 
	``pt'' units from image dimensions.
	* tex4ht-html4.tex (html4.4ht): Require horizontal stacking 
	of subfigures.

2017-05-03  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): added basic support for
	xeCJK package, fixed one issue with biblatex.
	Details:  https://tex.stackexchange.com/a/367968/2891 

2017-04-28  Karl Berry  <karl@freefriends.org>

	* Makefile (common): include mktex4ht.4ht and tex4ht.sty.
	(common_no_cond_sty): new variable without either of those.
	(tex4ht_cond4ht_derived,tex4ht_sty_derived): use
	  $(common_no_cond_sty) instead of $(common). 
	(tex4ht_4ht_derived): depend on cond4ht.4ht.
	
	* mktex4ht-cnf.tex: copyright 2017.
